Avoid to have the text layer mismatching the rendered text with mismatching locales (bug 1869001)
The system locale (used in OffscreenCanvas) can be different from the one guessed by Fluent,
consequently, in order to avoid any mismatch, we just use an attached canvas element.
The original issue can easily be reproduced locally in adding a lang="ja" in viewer.html
(or with an other language for Japanese users).

--- a/web/pdf_viewer.css
+++ b/web/pdf_viewer.css
@@ -46,7 +46,8 @@
   transform: rotate(270deg) translateX(-100%);
 }
 
-#hiddenCopyElement {
+#hiddenCopyElement,
+.hiddenCanvasElement {
   position: absolute;
   top: 0;
   left: 0;
